# Subscene-Subtitle-Grabber

./: .gitignore  .pre-commit-config.yaml  Doctor Strange Official Trailer 2 (2016).srt  README.md  README.rst  SubceneDL.py  changelog  changelog.rst  directory.py  directory1.py  eng_idioms.txt  main.py  pyproject.toml  select_subtitle.py  select_title.py  setup.py  subscene.py  subtitle.bat
core/: SubGrab.py  __main__.py  display.py  download.py  utils.py
core/providers/: provider.py  subdb.py  subscene.py  subscenere.py
core/util/: directory.py
core/utils/: directory.py
source/: subscene.py
subgrab/: SubGrab.py  __init__.py  __main__.py  cli.py  config.py  directory.py  subgrab.py
subgrab/modules/: directory.py  titleparser.py
subgrab/providers/: addic7ed.py  provider.py  subdb.py  subscene.py
subgrab/source/: subscene.py
subgrab/tests/: test_titleparser.py
subgrab/utils/: directory.py  languages.json  languages.py  scraping.py  titleparser.py
tests/: test_directory.py  test_subscene.py  test_titleparser.py
